--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -6,12 +6,12 @@
     width: 100%;
     height: 100%;
     opacity: 1;
-    transition: opacity 250ms var(--timing-function);
+    transition: opacity 250ms $timing-function;
 
     &.is-hidden {
-            opacity: 0;
-            pointer-events: none;
-        }
+        opacity: 0;
+        pointer-events: none;
+    }
 }
 
 
@@ -21,19 +21,19 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%) scale(1);
-    transition: transform 250ms var(--timing-function);
+    transition: transform 250ms $timing-function;
     display: block;
     opacity: 1;
     width: 528px;
     min-height: 581px;
     padding: 40px;
-    background: var(--first-background-color);
+    background: $first-background-color;
     box-shadow: 0px 1px 3px rgb(0 0 0 / 12%), 0px 1px 1px rgb(0 0 0 / 14%), 0px 2px 1px rgb(0 0 0 / 20%);
     border-radius: 4px;
 
     .backdrop.is-hidden &.modal {
-            transform: translate(-50%, -50%) scale(0);
-        }
+        transform: translate(-50%, -50%) scale(0);
+    }
 }
 
 .modal-close-btn {
@@ -44,16 +44,16 @@
     height: 30px;
     @extend %align-list;
     justify-content: center;
-    background: var(--first-background-color);
+    background: $first-background-color;
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 50%;
     cursor: pointer;
     fill: #000000;
-    transition: fill 250ms var(--timing-function);
+    transition: fill 250ms $timing-function;
 
     &:hover,
     &:focus {
-        fill: var(--first-accent-color);
+        fill: $first-accent-color;
     }
 }
 
@@ -64,7 +64,7 @@
     text-align: center;
     letter-spacing: 0.03em;
     margin-bottom: 12px;
-    color: var(--first-text-color);
+    color: $first-text-color;
 }
 
 .modal-field:not(:first-child) {
@@ -75,7 +75,7 @@
     font-size: 12px;
     line-height: 1.16;
     letter-spacing: 0.01em;
-    color: var(--second-text-color);
+    color: $second-text-color;
 }
 
 .modal-input {
@@ -90,12 +90,12 @@
 
     &:hover,
     &:focus {
-        border-color: var(--first-accent-color);
+        border-color: $first-accent-color;
     }
 
-        &:focus+.modal-form-icon {
-            fill: var(--first-accent-color);
-        }
+    &:focus+.modal-form-icon {
+        fill: $first-accent-color;
+    }
 }
 
 .input-wrap {
@@ -103,8 +103,8 @@
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &:hover {
-            fill: var(--first-accent-color);
-        }
+        fill: $first-accent-color;
+    }
 }
 
 .modal-form-icon {
@@ -138,7 +138,7 @@
 
     &:hover,
     &:focus {
-        border-color: var(--first-accent-color);
+        border-color: $first-accent-color;
     }
 }
 
@@ -149,13 +149,13 @@
     text-align: center;
     font-size: 14px;
     line-height: 1.71;
-    color: var(--second-text-color);
+    color: $second-text-color;
 
     &::before {
         content: "";
         width: 16px;
         height: 15px;
-        border: 2px solid var(--first-text-color);
+        border: 2px solid $first-text-color;
         border-radius: 3px;
         margin-right: 7px;
         transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -163,7 +163,7 @@
 }
 
 .modal-check:checked+.check-text::before {
-    background-color: var(--first-accent-color);
+    background-color: $first-accent-color;
     background-image: url(../images/check.svg);
     border: none;
     background-repeat: no-repeat;
@@ -171,11 +171,11 @@
 }
 
 .modal-check:focus+.check-text::before {
-    border-color: var(--first-accent-color);
+    border-color: $first-accent-color;
 }
 
 .link-modal {
-    color: var(--first-accent-color);
+    color: $first-accent-color;
 }
 
 .button-form {
@@ -194,14 +194,14 @@
     letter-spacing: 0.06em;
     cursor: pointer;
     border: none;
-    color: var(--third-text-color);
-    background: var(--first-accent-color);
+    color: $third-text-color;
+    background: $first-accent-color;
     border-radius: 4px;
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &:hover,
     &:focus {
-            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-            background-color: var(--second-accent-color);
-        }
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+        background-color: $second-accent-color;
+    }
 }
