--- a/sass/layout/_about.scss
+++ b/sass/layout/_about.scss
@@ -12,7 +12,7 @@
         line-height: 1.16;
         text-align: center;
         letter-spacing: 0.03em;
-        color: var(--first-text-color);
+        color: $first-text-color;
         margin-bottom: 50px;
     }
 }
@@ -40,5 +40,5 @@
     text-align: center;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    color: var(--third-text-color);
+    color: $third-text-color;
 }
