--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -8,7 +8,7 @@
         line-height: 1.16;
         text-align: center;
         letter-spacing: 0.03em;
-        color: var(--first-text-color);
+        color: $first-text-color;
         margin-bottom: 50px;
     }
 
@@ -33,15 +33,15 @@
 
     &:hover .clients__icon,
     &:focus .clients__icon {
-        fill: var(--first-accent-color);
-        border: 1px solid var(--first-accent-color);
+        fill: $first-accent-color;
+        border: 1px solid $first-accent-color;
         border-radius: 4px;
     }
 }
 
 .clients__icon {
-    fill: var(--icon-color);
+    fill: $icon-color;
     border: 1px solid #AFB1B8;
     border-radius: 4px;
-    transition: fill 250ms var(--timing-function);
+    transition: fill 250ms $timing-function;
 }
