--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -22,14 +22,14 @@
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
-    color: var(--first-text-color);
+    color: $first-text-color;
     padding-top: 32px;
     padding-bottom: 32px;
-    transition: color 250ms var(--timing-function);
+    transition: color 250ms $timing-function;
 
     &:hover,
     &:focus {
-        color: var(--first-accent-color);
+        color: $first-accent-color;
     }
 }
 
@@ -38,7 +38,7 @@
     position: absolute;
     width: 100%;
     height: 4px;
-    background-color: var(--first-accent-color);
+    background-color: $first-accent-color;
     border-radius: 2px;
     left: 0;
     bottom: -1px;
@@ -52,11 +52,11 @@
     letter-spacing: 0.03em;
 
     &--light {
-        color: var(--third-text-color);
+        color: $third-text-color;
     }
 
     &--dark {
-        color: var(--first-text-color);
+        color: $first-text-color;
     }
 }
 
@@ -67,11 +67,11 @@
 }
 
 .logo-accent {
-    color: var(--first-accent-color);
+    color: $first-accent-color;
 }
 
 .current {
-    color: var(--first-accent-color);
+    color: $first-accent-color;
 }
 
 
@@ -87,14 +87,14 @@
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
-    color: var(--second-text-color);
+    color: $second-text-color;
     padding-top: 32px;
     padding-bottom: 32px;
-    transition: color 250ms var(--timing-function);
+    transition: color 250ms $timing-function;
 
     &:hover,
     &:focus {
-        color: var(--first-accent-color);
+        color: $first-accent-color;
     }
 }
 
