--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -22,18 +22,18 @@
     letter-spacing: 0.03em;
     border: none;
     cursor: pointer;
-    color: var(--first-text-color);
-    background-color: var(--third-background-color);
+    color: $first-text-color;
+    background-color: $third-background-color;
     padding: 6px 22px;
     border-radius: 4px;
-    transition: color 250ms var(--timing-function),
-        background-color 250ms var(--timing-function),
-        box-shadow 250ms var(--timing-function);
+    transition: color 250ms $timing-function,
+        background-color 250ms $timing-function,
+        box-shadow 250ms $timing-function;
 
     &:hover,
     &:focus {
-        color: var(--third-text-color);
-        background-color: var(--first-accent-color);
+        color: $third-text-color;
+        background-color: $first-accent-color;
         box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
         border-radius: 4px;
     }
@@ -55,7 +55,7 @@
 }
 
 .grid__link {
-    transition: box-shadow 250ms var(--timing-function);
+    transition: box-shadow 250ms $timing-function;
 
     &:hover,
     &:focus {
@@ -75,14 +75,14 @@
         font-size: 18px;
         line-height: 2;
         letter-spacing: 0.06em;
-        color: var(--first-text-color);
+        color: $first-text-color;
     }
 
     &__text {
         font-size: 16px;
         line-height: 1.88;
         letter-spacing: 0.03em;
-        color: var(--second-text-color);
+        color: $second-text-color;
     }
 }
 
@@ -98,7 +98,7 @@
         font-size: 18px;
         line-height: 1.56;
         letter-spacing: 0.03em;
-        color: var(--third-text-color);
+        color: $third-text-color;
         padding: 63px 24px;
         transform: translateY(101%);
         transition: transform 250ms linear;
