--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -1,5 +1,5 @@
 .team {
-    background-color: var(--third-background-color);
+    background-color: $third-background-color;
     padding-top: 94px;
     padding-bottom: 94px;
 
@@ -9,7 +9,7 @@
         line-height: 1.16;
         text-align: center;
         letter-spacing: 0.03em;
-        color: var(--first-text-color);
+        color: $first-text-color;
         margin-bottom: 50px;
     }
 }
@@ -23,7 +23,7 @@
         line-height: 1.18;
         text-align: center;
         letter-spacing: 0.03em;
-        color: var(--first-text-color);
+        color: $first-text-color;
         margin-bottom: 10px;
     }
 
@@ -32,7 +32,7 @@
         line-height: 1.18;
         text-align: center;
         letter-spacing: 0.03em;
-        color: var(--second-text-color);
+        color: $second-text-color;
         margin-bottom: 16px;
     }
 
@@ -48,7 +48,7 @@
         0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
     width: 270px;
-    background-color: var(--first-background-color);
+    background-color: $first-background-color;
 
     &:not(:last-child) {
         margin-right: 30px;
@@ -73,31 +73,31 @@
 .socials__link {
     width: 100%;
     height: 100%;
-    background-color: var(--first-background-color);
+    background-color: $first-background-color;
     border-radius: 50%;
     @extend %align-list;
     justify-content: center;
-    transition: background-color 250ms var(--timing-function);
+    transition: background-color 250ms $timing-function;
 
     &:hover,
     &:focus {
-        background-color: var(--first-accent-color);
+        background-color: $first-accent-color;
     }
 }
 
 .socials__icon {
-    transition: fill 250ms var(--timing-function);
+    transition: fill 250ms $timing-function;
 
     &--light {
-        fill: var(--third-text-color);
+        fill: $third-text-color;
     }
 
     &--dark {
-        fill: var(--icon-color);
+        fill: $icon-color;
     }
 }
 
 .socials__link:hover .socials__icon,
 .socials__link:focus .socials__icon {
-    fill: var(--third-text-color);
+    fill: $third-text-color;
 }
